fix button placement on mobile

--- a/main.css
+++ b/main.css
@@ -642,7 +642,6 @@ hr {
     padding: 12px 16px;
     text-align: center;
     width: 40%;
-    margin: 0 auto 40px;
 }
 
 .service-description {
@@ -678,6 +677,10 @@ hr {
     } 
     .services a {
         padding: 10px 22px;
+    }
+    .book-btn {
+
+        margin: 0 auto 40px;
     }
     .thumbnail:hover > img {
         opacity: 0;
